--- a/src/components/ShoppingListItem/ShoppingListItem.css
+++ b/src/components/ShoppingListItem/ShoppingListItem.css
@@ -1,49 +1,52 @@
 .item-card {
-    background-color: white;
-    padding: 15px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  padding: 15px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
-  
+
 .item-name {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
-  
+
 .item-details {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
-  
+
 .item-unit {
-    margin-left: 5px;
+  margin-left: 5px;
 }
-  
+
 .item-actions {
-    display: flex;
-    gap: 52px;
+  display: flex;
+  gap: 10px;
 }
-  
+
 .purchased-label {
-    background-color: rgb(82, 88, 82);
-    color: white;
-    padding: 5px;
-    border-radius: 3px;
+  background-color: rgb(82, 88, 82);
+  color: white;
+  padding: 5px;
+  border-radius: 3px;
 }
-  
-.purchase-btn, .delete-btn {
-    padding: 5px 10px;
-    border-radius: 3px;
-    cursor: pointer;
-    border: none;
+
+.purchase-btn,
+.delete-btn,
+.edit-btn {
+  padding: 5px 10px;
+  border-radius: 3px;
+  cursor: pointer;
+  border: none;
 }
 .purchase-btn {
-    background-color: rgb(32, 112, 177);
-    color: white;
+  background-color: rgb(32, 112, 177);
+  color: white;
 }
-  
-.delete-btn {
-    background-color: rgb(243, 38, 38);
-    color: white;
-}
-  
 
-  
+.delete-btn {
+  background-color: rgb(243, 38, 38);
+  color: white;
+}
+.edit-btn {
+  background-color: yellow;
+  color: rgb(0, 0, 0);
+}
